# optib

./: .gitignore  README.md
a1/cxx/: CMakeLists.txt  Main.cpp  check.cpp  check.h  myShortestPath.cpp  mySpanningTree.cpp  mySteinerTree.cpp  randomVertex.cpp  randomVertex.h  readLgf.cpp  readLgf.h  types.h
a1/doc/: Makefile  solution.tex
a1/java/: Main.java  MyDisjointSet.java  myShortestPath.java  mySpanningTree.java  mySteinerTree.java
a1/java/de/kruska/optib/: CheckerPath.java  CheckerSpanningTree.java  CheckerSteinerTree.java  GraphReader.java  Main.java  MyDisjointSet.java  myShortestPath.java  mySpanningTree.java  mySteinerTree.java
a1/java_test/: TestGraphs.java
a1/java_test/de/kruska/optib/: TestGraphs.java
a1/src/: mySpanningTree.java
a2/data/: README.md  symlink.sh
a2/data/Cities/: cities.mod  cities.run  cities999.run  solution.txt  solution1000.txt  solution999.txt
a2/data/Coloring/: solution.txt  xclip
a2/data/Knapsack/: Knapsack.mod  Knapsack2.run  Knapsack3.run  solution1.txt  solution2.txt  solution3.txt
a2/data/Sudoku/: Sudoku.mod  Sudoku.run
a3/Prog3Java/: CheckerBipartiteMatching.java  CheckerBipartition.java  CheckerChristofides.java  CheckerFootballBettingGame.java  FootballReader.java  GraphReader.java  Main.java  Matchday.java  MyBipartiteMatching.java  MyBipartition.java  MyChristofides.java  MyFootballBettingGame.java  Prog3Java.tar  vpl_evaluate.cases  vpl_run.sh
a3/java_test/: TestGraphs.java  TestGraphsA3.java
